--- a/index.html
+++ b/index.html
@@ -1,31 +1,27 @@
-<!DOCTYPE html>
+<!doctype html>
 <html lang="en">
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Aries Dashboard</title>
-    <link rel="stylesheet" href="main.css">
+<meta charset="utf-8">
+<meta name="viewport" content="width=device-width,initial-scale=1">
+<title>Aries Dashboard</title>
+<link rel="stylesheet" href="main.css">
 </head>
 <body>
-
-    <header class="topbar">
-        <button class="hamburger">☰</button>
-        <div class="brand">ARIES DASHBOARD</div>
-        <img src="images/goat.png" class="logo" alt="Logo">
-    </header>
-
-    <div class="page-wrapper">
-        <main class="dashboard-main">
-            <div class="content-left">
-                <h1 class="aries-title">Aries</h1>
-                <p class="aries-subtitle">The King</p>
-            </div>
-            <div class="content-right">
-                <img src="images/goat.png" alt="Aries Ram Head" class="goat-image">
-            </div>
-        </main>
-    </div>
-
-    <script type="module" src="app.js"></script>
+<main class="page-wrapper">
+<section class="dashboard-main">
+<div class="content-left">
+<h1 class="aries-title">Aries</h1>
+<p class="aries-subtitle">Workflow & Project Manager</p>
+<nav class="quick-actions">
+<a class="action-btn" href="projects.html">Open Projects</a>
+<a class="action-btn" href="workspace.html">Open Workspace</a>
+</nav>
+</div>
+<div class="content-right">
+<img src="images/goat.png" alt="Aries" class="goat-image">
+</div>
+</section>
+</main>
+<script type="module" src="app.js"></script>
 </body>
 </html>
