--- a/index.html
+++ b/index.html
@@ -1,27 +1,104 @@
 <!doctype html>
 <html lang="en">
 <head>
-<meta charset="utf-8">
-<meta name="viewport" content="width=device-width,initial-scale=1">
-<title>Aries Dashboard</title>
-<link rel="stylesheet" href="main.css">
+  <meta charset="utf-8" />
+  <meta name="viewport" content="width=device-width,initial-scale=1" />
+  <title>Aries — Dashboard</title>
+
+  <!-- main stylesheet (you already added header/sidebar CSS here) -->
+  <link rel="stylesheet" href="main.css">
+
+  <!-- optional Google font for headline if you want the stylized look (fallbacks included) -->
+  <link href="https://fonts.googleapis.com/css2?family=Luckiest+Guy&family=Montserrat:wght@400;700&display=swap" rel="stylesheet">
+  <style>
+    /* Page-specific tweaks to match your screenshots */
+    .hero {
+      display: grid;
+      grid-template-columns: 1fr 460px;
+      gap: 40px;
+      align-items: center;
+      min-height: calc(100vh - 140px);
+      max-width: 1180px;
+      margin: 0 auto;
+      padding: 40px 20px;
+    }
+
+    .hero-left { padding-left: 40px; }
+    .aries-word {
+      font-family: 'Luckiest Guy', Georgia, serif;
+      font-size: 120px;
+      line-height: 0.9;
+      margin: 0 0 8px 0;
+      color: #0c0c0c;
+      letter-spacing: 2px;
+    }
+    .aries-sub {
+      font-family: 'Montserrat', Arial, sans-serif;
+      font-size: 28px;
+      color: #666;
+      margin: 0;
+    }
+
+    .hero-right { display:flex; align-items:center; justify-content:center; }
+    .hero-right img { max-width:420px; width:100%; height:auto; display:block; }
+
+    /* keep plenty of white space like your screenshots */
+    .page-wrapper { padding-top: 88px; }
+
+    /* small screen: stack and center */
+    @media (max-width: 900px) {
+      .hero { grid-template-columns: 1fr; text-align:center; padding: 28px 16px; gap: 18px; }
+      .hero-left { padding-left: 0; }
+      .aries-word { font-size: 64px; }
+      .hero-right img { max-width: 260px; }
+    }
+  </style>
 </head>
 <body>
-<main class="page-wrapper">
-<section class="dashboard-main">
-<div class="content-left">
-<h1 class="aries-title">Aries</h1>
-<p class="aries-subtitle">Workflow & Project Manager</p>
-<nav class="quick-actions">
-<a class="action-btn" href="projects.html">Open Projects</a>
-<a class="action-btn" href="workspace.html">Open Workspace</a>
-</nav>
-</div>
-<div class="content-right">
-<img src="images/goat.png" alt="Aries" class="goat-image">
-</div>
-</section>
-</main>
-<script type="module" src="app.js"></script>
+
+  <!-- ========== Header (use the component you saved) ========== -->
+  <header id="aries-topbar" class="aries-topbar" role="banner">
+    <button id="aries-hamburger" class="aries-hamburger" aria-controls="aries-sidebar" aria-expanded="false" aria-label="Open menu">
+      <span class="sr-only">Open menu</span>
+      ☰
+    </button>
+
+    <div class="aries-title" aria-hidden="true">PROJECT MANAGER</div>
+
+    <a href="index.html" class="aries-brand" aria-label="Go to dashboard">
+      <img src="images/goat.png" alt="Aries" class="aries-logo">
+    </a>
+  </header>
+
+  <!-- ========== Sidebar (use the component you saved) ========== -->
+  <aside id="aries-sidebar" class="aries-sidebar collapsed" role="complementary" aria-label="Project list">
+    <div class="aries-sidebar-top">
+      <button id="aries-sidebar-back" class="aries-sidebar-back" aria-label="Collapse sidebar">◀</button>
+    </div>
+
+    <nav class="aries-sidebar-nav" role="navigation" aria-label="Projects">
+      <!-- Example placeholder project list -->
+      <button class="aries-project" data-id="p1">Project 1</button>
+      <button class="aries-project" data-id="p2">Project 2</button>
+      <button class="aries-project" data-id="p3">Project 3</button>
+    </nav>
+  </aside>
+
+  <!-- ========== Main content ========== -->
+  <main class="page-wrapper">
+    <section class="hero" role="main" aria-labelledby="hero-heading">
+      <div class="hero-left">
+        <h1 id="hero-heading" class="aries-word">Aries</h1>
+        <p class="aries-sub">King</p>
+      </div>
+
+      <div class="hero-right" aria-hidden="true">
+        <img src="images/goat.png" alt="Aries logo">
+      </div>
+    </section>
+  </main>
+
+  <!-- app script wires header + sidebar + Firebase (replace app.js as you already did) -->
+  <script type="module" src="app.js"></script>
 </body>
 </html>
